[package]
name = "openrelay_core"
version = "1.0.0-rc.1"
edition = "2024"
authors = ["Awe03"]
description = "The rust backend for OpenRelay"

[lib]
name = "openrelay_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm = "0.10.3"
thiserror = "2.0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true